# czech-laws

./: .gitignore  README.md  pyproject.toml
czech_laws/: collections.py  config.py  context.py  details.py  references.py
examples/: example.py  laws_to_sql.py
module/: collections.py
