[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "czech-laws"
version = "1.0.1"
authors = [
  { name="Philip Jediny", email="jedinyphilip@gmail.com" },
]
description = "A package for fetching and cataloguing Czech laws."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
dependencies = [
    "requests",
    "pandas"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
